2005-04-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in (ALL_LINGUAS): Added "sr" and "sr@Latn".

2005-04-04  Shaun McCance  <shaunm@gnome.org>

	* gnome-doc-utils.make:
	- More builddir != srcdir fixes

2005-04-04  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 0.2.0

2005-04-03  Shaun McCance  <shaunm@gnome.org>

	* gnome-doc-utils.make:
	- Use -e on xml2po when generating docs

2005-04-01  Shaun McCance  <shaunm@gnome.org>

	* gnome-doc-utils.make:
	- More builddir fixes, hopefully fixing #169768 this time

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-31  Shaun McCance  <shaunm@gnome.org>

	* autogen.sh:
	* gnome-autogen.sh:
	- Use local gnome-autogen.sh to avoid circular dependency, #171894

2005-03-31  Shaun McCance  <shaunm@gnome.org>

	* xslt/gettext/gettext.xsl:
	- Plural form rules for more languages, from Changwoo Ryu

2005-03-27  Shaun McCance  <shaunm@gnome.org>

	* COPYING:
	* gnome-doc-utils.make:
	* xslt/docbook/common/db-chunk.xsl:
	* xslt/docbook/common/db-common.xsl:
	* xslt/docbook/common/db-label.xsl:
	* xslt/docbook/common/db-title.xsl:
	* xslt/docbook/common/db-xref.xsl:
	* xslt/docbook/html/db2html-admon.xsl:
	* xslt/docbook/html/db2html-autotoc.xsl:
	* xslt/docbook/html/db2html-block.xsl:
	* xslt/docbook/html/db2html-callout.xsl:
	* xslt/docbook/html/db2html-classsynopsis.xsl:
	* xslt/docbook/html/db2html-css.xsl:
	* xslt/docbook/html/db2html-division.xsl:
	* xslt/docbook/html/db2html-ebnf.xsl:
	* xslt/docbook/html/db2html-funcsynopsis.xsl:
	* xslt/docbook/html/db2html-info.xsl:
	* xslt/docbook/html/db2html-inline.xsl:
	* xslt/docbook/html/db2html-list.xsl:
	* xslt/docbook/html/db2html-media.xsl:
	* xslt/docbook/html/db2html-qanda.xsl:
	* xslt/docbook/html/db2html-refentry.xsl:
	* xslt/docbook/html/db2html-suppressed.xsl:
	* xslt/docbook/html/db2html-table.xsl:
	* xslt/docbook/html/db2html-title.xsl:
	* xslt/docbook/html/db2html-xref.xsl: