@@ -26,4 +26,4 @@ export ACLOCAL_FLAGS
 REQUIRED_AUTOMAKE_VERSION=1.6
 export REQUIRED_AUTOMAKE_VERSION
 
-USE_GNOME2_MACROS=1 . ./gnome-autogen.sh
+USE_GNOME2_MACROS=1 . $srcdir/gnome-autogen.sh
